--- a/ecommerce/main/templates/main/account-register.html
+++ b/ecommerce/main/templates/main/account-register.html
@@ -236,7 +236,7 @@
                 <h1>Register Account</h1>
                 <p>If you already have an account with us, please login at the <a href="account-login.html">login
                         page</a>.</p>
-                <form method="post" class="form-horizontal">
+                <form method="POST" class="form-horizontal">
                     {% csrf_token %}
                     <fieldset id="account">
                         <legend>Your Personal Details</legend>
@@ -250,52 +250,59 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group required">
+                        <!-- full name -->
+                        <!-- <div class="form-group required">
                             <label class="col-sm-2 control-label" for="input-firstname">Full Name</label>
                             <div class="col-sm-10">
                                 <input type="text" name="full_name" value="" placeholder="Full Name"
                                     id="input-firstname" class="form-control" />
                             </div>
-                        </div>
-                        <div class="form-group required">
+                        </div> -->
+                        <!-- username -->
+                        <!-- <div class="form-group required">
                             <label class="col-sm-2 control-label" for="input-username">Username</label>
                             <div class="col-sm-10">
                                 <input type="text" name="username" value="" placeholder="Username" id="input-username"
                                     class="form-control" />
                             </div>
+                        </div> -->
+                        <div class="form-group required">
+                            <label class="col-sm-2 control-label" for="input-username">Username</label>
+                            <div class="col-sm-10">
+                              {{form.username}}
+                            </div>
                         </div>
                         <div class="form-group required">
                             <label class="col-sm-2 control-label" for="input-email">E-Mail</label>
                             <div class="col-sm-10">
-                                <input type="text" name="email" value="" placeholder="E-Mail" id="input-email"
-                                    class="form-control" />
+                            {{form.email}}
                             </div>
                         </div>
-                        <div class="form-group required">
+                        <!-- cont number -->
+                        <!-- <div class="form-group required">
                             <label class="col-sm-2 control-label" for="input-telephone">Phone Number</label>
                             <div class="col-sm-10">
                                 <input type="tel" name="phone_number" value="" placeholder="Phone Number" id="input-telephone"
                                     class="form-control" />
                             </div>
-                        </div>
+                        </div> -->
                     </fieldset>
                     <fieldset>
                         <legend>Your Password</legend>
                         <div class="form-group required">
                             <label class="col-sm-2 control-label" for="input-password">Password</label>
                             <div class="col-sm-10">
-                                <input type="password" name="password" value="" placeholder="Password"
-                                    id="input-password" class="form-control" />
+                                {{form.password}}
                             </div>
                         </div>
                         <div class="form-group required">
                             <label class="col-sm-2 control-label" for="input-confirm">Password Confirm</label>
                             <div class="col-sm-10">
-                                <input type="password" name="confirm" value="" placeholder="Password Confirm"
-                                    id="input-confirm" class="form-control" />
+                                {{form.confirm}}
                             </div>
                         </div>
                     </fieldset>
+                    {{form.errors}}
 
                     <div class="buttons">
                         <div class="pull-right">
