--- a/ecommerce/main/templates/main/account-register.html
+++ b/ecommerce/main/templates/main/account-register.html
@@ -292,13 +292,13 @@
                         <div class="form-group required">
                             <label class="col-sm-2 control-label" for="input-password">Password</label>
                             <div class="col-sm-10">
-                                {{form.password}}
+                                {{form.password1}}
                             </div>
                         </div>
                         <div class="form-group required">
                             <label class="col-sm-2 control-label" for="input-confirm">Password Confirm</label>
                             <div class="col-sm-10">
-                                {{form.confirm}}
+                                {{form.password2}}
                             </div>
                         </div>
                     </fieldset>
