--- a/ecommerce/main/templates/main/account-login.html
+++ b/ecommerce/main/templates/main/account-login.html
@@ -120,6 +120,7 @@
             </div>
         </div>
     </header>
+
     <div id="account-login" class="container">
         <ul class="breadcrumb">
             <li><a href="index.html"><i class="fa fa-home"></i></a></li>
@@ -135,7 +136,7 @@
                             <p><strong>Register</strong></p>
                             <p>By creating an account you will be able to shop faster, be up to date on an order's
                                 status, and keep track of the orders you have previously made.</p>
-                            <a href="index5502.html?route=account/register" class="btn btn-primary">Continue</a>
+                            <a href="{% url 'register' %}" class="btn btn-primary">Continue</a>
                         </div>
                     </div>
                     <div class="col-sm-6">
