--- a/ecommerce/main/templates/main/base_files/footer.html
+++ b/ecommerce/main/templates/main/base_files/footer.html
@@ -133,6 +133,7 @@
                     stock is carefully selected to ensure we offer you top quality at competitive prices.</p>
                 <div class="payment">
                     <img src="{% static 'main/image/catalog/play.png' %}" height="70px" alt="Download App">
+                    <img src="{% static 'main/image/catalog/admin.png' %}" height="80px" alt="Download App">
                 </div>
 
 
