--- a/ecommerce/main/templates/main/base_files/topbar.html
+++ b/ecommerce/main/templates/main/base_files/topbar.html
@@ -17,7 +17,7 @@
                     </li>
                     
                     <li id="top-links" class="nav-item nav user-menu header-dropdown has-arrow main-drop">
-                        <a href="{% url 'login' %}" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                        <a href="{% url 'profile' %}" class="dropdown-toggle nav-link" data-toggle="dropdown">
                             <i class="fa fa-user"></i> 
                             <span class="hidden-xs hidden-sm">{{request.user.username}}</span>
                         </a>
