--- a/ecommerce/dashboard/templates/dashboard/user-login.html
+++ b/ecommerce/dashboard/templates/dashboard/user-login.html
@@ -2,69 +2,68 @@
 {% load static %}
 {% block leftbar %} {%endblock %}
 {% block rightbar %} {%endblock %}
-{% block content %}
-<body class="vertical-layout">
-    <!-- Start Containerbar -->
+{% block loginPage %}
 <div id="containerbar" class="containerbar authenticate-bg">
-<!-- Start Container -->
-<div class="container">
-    <div class="auth-box login-box">
-        <!-- Start row -->
-        <div class="row no-gutters align-items-center justify-content-center">
-            <!-- Start col -->
-            <div class="col-md-2 col-lg-5">
-                <!-- Start Auth Box -->
-                <div class="auth-box-right">
-                    <div class="card">
-                        <div class="card-body">
-                            <form action="#">
-                                <div class="form-head">
-                                    <a href="index.html" class="logo"><img src="{% static 'main/image/catalog/logo/ostromi2.png' %}"
+    <!-- Start Container -->
+    <div class="container">
+        <div class="auth-box login-box">
+            <!-- Start row -->
+            <div class="row no-gutters align-items-center justify-content-center">
+                <!-- Start col -->
+                <div class="col-md-6 col-lg-5">
+                    <!-- Start Auth Box -->
+                    <div class="auth-box-right">
+                        <div class="card">
+                            <div class="card-body">
+                                <form method="post">
+                                    {% csrf_token %}
+                                    <div class="form-head">
+                                          <a href="index.html" class="logo"><img src="{% static 'main/image/catalog/logo/ostromi2.png' %}"
                                             class="img-fluid" alt="logo"></a>
-                                </div>
-                                <h4 class="text-primary my-4">Log in !</h4>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="username"
-                                        placeholder="Enter Username here" required>
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" id="password"
-                                        placeholder="Enter Password here" required>
-                                </div>
-                                <div class="form-row mb-3">
-                                    <div class="col-sm-6">
-                                        <div class="custom-control custom-checkbox text-left">
-                                            <input type="checkbox" class="custom-control-input" id="rememberme">
-                                            <label class="custom-control-label font-14" for="rememberme">Remember
-                                                Me</label>
-                                        </div>
+                                    </div>                                        
+                                    <h4 class="text-primary my-4">Log in !</h4>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Enter email here. " name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="254" required="" id="id_username">
                                     </div>
-                                    <div class="col-sm-6">
-                                        <div class="forgot-psw">
-                                            <a id="forgot-psw" href="user-forgotpsw.html" class="font-14">Forgot
-                                                Password?</a>
-                                        </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control" placeholder="Enter password here" name="password" autocomplete="current-password" required="" id="id_password">
                                     </div>
+                                    <div class="form-row mb-3">
+                                        <div class="col-sm-6">
+                                            <div class="custom-control custom-checkbox text-left">
+                                                <input type="checkbox" class="custom-control-input" id="rememberme">
+                                                <label class="custom-control-label font-14" for="rememberme">Remember Me</label>
+                                            </div>                                
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="forgot-psw"> 
+                                                <a id="forgot-psw" href="user-forgotpsw.html" class="font-14">Forgot Password?</a>
+                                            </div>
+                                        </div>
+                                    </div>                          
+                                    <button type="submit" class="btn btn-success btn-lg btn-block font-18">Log in</button>
+                                    {{form.non_field_errors}}
+                                </form>
+                                <div class="login-or">
+                                    <h6 class="text-muted">OR</h6>
                                 </div>
-                                <button type="submit" class="btn btn-success btn-lg btn-block font-18">Log in</button>
-                            </form>
-                            
-                            
-                            <p class="mb-0 mt-3">Don't have a account? <a href="tel:9804385646">Contact Admin</a>
-                            </p>
+                                <div class="social-login text-center">
+                                    <button type="submit" class="btn btn-primary-rgba font-18"><i class="mdi mdi-facebook mr-2"></i>Facebook</button>
+                                    <button type="submit" class="btn btn-danger-rgba font-18"><i class="mdi mdi-google mr-2"></i>Google</button>
+                                </div>
+                                <p class="mb-0 mt-3">Don't have a account? <a href="user-register.html">Sign up</a></p>
+                            </div>
                         </div>
                     </div>
+                    <!-- End Auth Box -->
                 </div>
-                <!-- End Auth Box -->
+                <!-- End col -->
             </div>
-            <!-- End col -->
+            <!-- End row -->
         </div>
-        <!-- End row -->
     </div>
+    <!-- End Container -->
 </div>
-</div>
-</div>
-</body>
-<!-- End Container -->
-{% endblock %}
+<!-- End Containerbar -->
 
+{% endblock %}
