--- a/ecommerce/main/templates/main/product.html
+++ b/ecommerce/main/templates/main/product.html
@@ -4,11 +4,11 @@
 <div class="wrapper">
     <div id="back-top"><i class="ion-chevron-up"></i></div>
     {% include 'main/base_files/topbar.html' %}
-    {{product.product_name}}
-   <img height="200px" width="200px" src=" {{product.image_field.url}}" alt="">
+    {{item.title}}
+   <img height="200px" width="200px" src=" {{item.image.url}}" alt="">
    <form action="" method="POST">
     {% csrf_token %}
-    <a href="{% url 'addtocart' product.pk" class="btn btn-primary btn-md my-0 p">
+    <a href="{% url 'add-to-cart' item.pk %}" class="btn btn-primary btn-md my-0 p">
         Add to cart
         <i class="fas fa-shopping-cart ml-1"></i>
 
