--- a/ecommerce/main/templates/main/base.html
+++ b/ecommerce/main/templates/main/base.html
@@ -34,6 +34,8 @@
 
 <body class="bg-light">
     <!-- loader start -->
+
+    {% block header %}
     <div class="loader-wrapper">
         <div> <img src="{% static 'main/images/loader.gif' %}" alt="loader"> </div>
     </div>
@@ -937,10 +939,12 @@
         </div>
     </header>
     <!--header end-->
+    {% endblock %}
 
     {% block content %}
     {% endblock %}
     <!-- footer start -->
+    {% block footer %}
     <footer>
         <div class="footer1 ">
             <div class="container">
@@ -1070,7 +1074,9 @@
         </div>
     </footer>
     <!-- footer end -->
+    {% endblock %}
 
+    {% block newsletter-popup %}
     <!--Newsletter modal popup start-->
     <div class="modal fade bd-example-modal-lg theme-modal" id="exampleModal" tabindex="-1" role="dialog"
         aria-hidden="true">
@@ -1350,6 +1356,7 @@
         </div>
     </div>
     <!-- Quick-view modal popup end-->
+    {% endblock %}
 
     <!-- edit product modal start-->
     <div class="modal fade bd-example-modal-lg theme-modal pro-edit-modal" id="edit-product" tabindex="-1" role="dialog"
@@ -1766,6 +1773,7 @@
     </div>
     <!-- Add to account bar end-->
 
+    {% block settings %}
     <!-- add to  setting bar  start-->
     <div id="mySetting" class="add_to_cart right">
         <a href="javascript:void(0)" class="overlay" onclick="closeSetting()"></a>
@@ -1801,6 +1809,8 @@
     </div>
     <!-- add to  setting bar  end-->
 
+    {% endblock  %}
+    {% block notify-product  %}
     <!-- notification product -->
     <div class="product-notification" id="dismiss">
         <span onclick="dismiss();" class="btn-close" aria-hidden="true"></span>
@@ -1813,6 +1823,7 @@
         </div>
     </div>
     <!-- notification product -->
+    {% endblock %}
 
     <!-- latest jquery-->
     <script src="{% static 'main/js/jquery-3.3.1.min.js' %}"></script>
@@ -1839,6 +1850,8 @@
     <script src="{% static 'main/js/script.js' %}"></script>
     <script src="{% static 'main/js/timer2.js' %}"></script>
     <script src="{% static 'main/js/modal.js' %}"></script>
+    {% block javascript %}
+    {% endblock %}
 </body>
 
 
