--- a/ecommerce/main/templates/main/login.html
+++ b/ecommerce/main/templates/main/login.html
@@ -1,6 +1,28 @@
-{% extends 'main/base.html' %}
+{% extends 'main/base.html'%}
 {% load static %}
+{% block header%}
+{% endblock %}
 {% block content %}
+<!-- breadcrumb start -->
+<div class="breadcrumb-main ">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="breadcrumb-contain">
+                    <div>
+                        <h2>login</h2>
+                        <ul>
+                            <li><a href="{% url 'main' %}">home</a></li>
+                            <li><i class="fa fa-angle-double-right"></i></li>
+                            <li><a href="javascript:void(0)">login</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- breadcrumb End -->
 
 <!--section start-->
 <section class="login-page section-big-py-space b-g-light">
@@ -9,19 +31,22 @@
             <div class="col-xl-4 col-lg-6 col-md-8 offset-xl-4 offset-lg-3 offset-md-2">
                 <div class="theme-card">
                     <h3 class="text-center">Login</h3>
-                    <form class="theme-form">
+                    <form class="theme-form" method="post">
+                        {% csrf_token %}
                         <div class="form-group">
-                            <label >Email</label>
-                            <input type="text" class="form-control"  placeholder="Email" required="">
+                            <label>Email</label>
+                            <input type="text" class="form-control" placeholder="Email" required="">
                         </div>
                         <div class="form-group">
-                            <label >Password</label>
-                            <input type="password" class="form-control"  placeholder="Enter your password" required="">
+                            <label>Password</label>
+                            <input type="password" class="form-control" placeholder="Enter your password" required="">
                         </div>
-                        <a href="javascript:void(0)" class="btn btn-normal">Login</a>
+                        <button type="submit" class="btn btn-normal">Login</button>
                         <a class="float-end txt-default mt-2" href="forget-pwd.html">Forgot your password?</a>
+                        {{form.non_field_errors}}
                     </form>
-                    <p class="mt-3">Sign up for a free account at our store. Registration is quick and easy. It allows you to be able to order from our shop. To start shopping click register.</p>
+                    <p class="mt-3">Sign up for a free account at our store. Registration is quick and easy. It allows
+                        you to be able to order from our shop. To start shopping click register.</p>
                     <a href="register.html" class="txt-default pt-3 d-block">Create an Account</a>
                 </div>
             </div>
@@ -29,4 +54,28 @@
     </div>
 </section>
 <!--Section ends-->
+{% block javascript %}
+<script>
+$("form").on("submit", function(e) {
+    e.preventDefault();
+    $.ajax({
+        url: '/login/', 
+
+    }).done(function(data) {
+        console.log(data);
+    })
+})
+
+</script>
+{% endblock %}
+
+
+
+
+{% endblock %}
+{% block footer %}
+{% endblock %}
+{% block notify-product %}
+{% endblock %}
+{% block newsletter-popup %}
 {% endblock %}
