--- a/ecommerce/main/templates/main/index.html
+++ b/ecommerce/main/templates/main/index.html
@@ -206,6 +206,10 @@
                                 <div class="product-slide-6 product-m no-arrow">
                                     <!-- pRODUCT fETCH -->
                                     {% for items in items %}
+                                    {% if items.types == "0" %}
+                                  
+                                   
+                                    
                                     <div>
                                         <div class="product-box">
                                             <div class="product-imgbox">
@@ -227,10 +231,7 @@
                                             <div class="product-detail detail-center detail-inverse">
                                                 <div class="detail-title">
                                                     <div class="detail-left">
-                                                        <div class="rating-star"> <i class="fa fa-star"></i> <i
-                                                                class="fa fa-star"></i> <i class="fa fa-star"></i> <i
-                                                                class="fa fa-star"></i> <i class="fa fa-star"></i>
-                                                        </div>
+                                                       
                                                         <a href="product-page(left-sidebar).html">
                                                             <h6 class="price-title">
                                                                 {{items.title}}
@@ -257,6 +258,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    {% endif %}
                                     {%endfor%}
                                   
                                    
@@ -2521,6 +2523,10 @@
                                 <div class="product-slide-6 product-m no-arrow">
                                     <!-- pRODUCT fETCH -->
                                     {% for items in items %}
+                                    {% if items.types == "1" %}
+                                   
+                                   
+                                    
                                     <div>
                                         <div class="product-box">
                                             <div class="product-imgbox">
@@ -2542,10 +2548,7 @@
                                             <div class="product-detail detail-center detail-inverse">
                                                 <div class="detail-title">
                                                     <div class="detail-left">
-                                                        <div class="rating-star"> <i class="fa fa-star"></i> <i
-                                                                class="fa fa-star"></i> <i class="fa fa-star"></i> <i
-                                                                class="fa fa-star"></i> <i class="fa fa-star"></i>
-                                                        </div>
+                                                       
                                                         <a href="product-page(left-sidebar).html">
                                                             <h6 class="price-title">
                                                                 {{items.title}}
@@ -2572,6 +2575,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    {% endif %}
                                     {%endfor%}
                                   
                                    
@@ -2600,10 +2604,7 @@
                                             <div class="product-detail detail-center detail-inverse">
                                                 <div class="detail-title">
                                                     <div class="detail-left">
-                                                        <div class="rating-star"> <i class="fa fa-star"></i> <i
-                                                                class="fa fa-star"></i> <i class="fa fa-star"></i> <i
-                                                                class="fa fa-star"></i> <i class="fa fa-star"></i>
-                                                        </div>
+                                                       
                                                         <a href="product-page(left-sidebar).html">
                                                             <h6 class="price-title">
                                                                 dressing mirror
