--- a/ecommerce/main/templates/main/product-wise-list.html
+++ b/ecommerce/main/templates/main/product-wise-list.html
@@ -1,7 +1,7 @@
-{% extends 'main/base_files/base.html' %}
+{% extends 'main/base.html' %}
 {% load static %}
 {% block content %}
-<div style="">
+<div>
 
     <div id="back-top"><i class="ion-chevron-up"></i></div>
 
