--- a/ecommerce/main/templates/main/product.html
+++ b/ecommerce/main/templates/main/product.html
@@ -3,9 +3,13 @@
 {% block content %}
 <div class="wrapper">
     <div id="back-top"><i class="ion-chevron-up"></i></div>
-    {% include 'main/base_files/topbar.html' %}
-    {{item.title}}
-   <img height="200px" width="200px" src=" {{item.image.url}}" alt="">
+    
+    {{item.title}} <br>
+    {{item.description}} <br>
+    <i>first image</i>
+   <img height="200px" width="200px" src=" {{item.image.url}}" alt=""><br>
+   <i>second image</i>
+   <img height="200px" width="200px" src=" {{item.h_image.url}}" alt="">
    <form action="" method="POST">
     {% csrf_token %}
     <a href="{% url 'add-to-cart' item.pk %}" class="btn btn-primary btn-md my-0 p">
