--- a/ecommerce/dashboard/templates/dashboard/base_files/base.html
+++ b/ecommerce/dashboard/templates/dashboard/base_files/base.html
@@ -327,9 +327,11 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4">
+                    <a href='#'>
                     <div class="widgetbar">
                         <button class="btn btn-primary-rgba"><i class="feather icon-plus mr-2"></i>Add</button>
-                    </div>                        
+                    </div>   
+                </a>                     
                 </div>
             </div>          
         </div>
