--- a/ecommerce/dashboard/templates/dashboard/ecommerce-product-list.html
+++ b/ecommerce/dashboard/templates/dashboard/ecommerce-product-list.html
@@ -29,7 +29,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-bordered">
+                                    <table class="table table-center datatable">
                                         <thead>
                                             <tr>
                                                 <th>ID</th>
@@ -44,16 +44,20 @@
                                                 <th>Actions</th>
                                             </tr>
                                         </thead>
+
+<!-- fetch start -->
+                                        {% for items in items %}
+
                                         <tbody>
                                             <tr>
-                                                <th scope="row">1</th>
-                                                <td><img src="{% static 'dashboard/images/ecommerce/product_01.svg' %}" class="img-fluid" width="35" alt="product"></td>
-                                                <td><a href="{% url 'details' %}">Apple MacBook Pro</a></td>
+                                                <th scope="row">{{items.id}}</th>
+                                                <td><img src="{{items.image.url}}" class="img-fluid" width="35" alt="product"></td>
+                                                <td><a href="{% url 'details' %}">{{items.title}}</a></td>
                                                 <td class="text-success">In Stock</td>
-                                                <td>$1,95,000</td>
-                                                <td>Electronics, Computers</td>
-                                                <td><span class="badge badge-secondary-inverse mr-2">Gaming</span><span class="badge badge-secondary-inverse">Popular</span></td>
-                                                <td>205</td>
+                                                <td>Rs. {{items.price}}</td>
+                                                <td>{{items.category}}</td>
+                                                <td><span class="badge badge-secondary-inverse mr-2"></span><span class="badge badge-secondary-inverse">{{items.types}}</span></td>
+                                                <td>{{items.quantity}}</td>
                                                
                                                 <td>
                                                     <div class="button-list">
@@ -64,6 +68,8 @@
                                             </tr>
                                            
                                         </tbody>
+{%endfor %}
+                                        <!-- fetch end -->
                                     </table>
                                 </div>
                             </div>
