--- a/ecommerce/dashboard/templates/dashboard/base_files/base.html
+++ b/ecommerce/dashboard/templates/dashboard/base_files/base.html
@@ -26,6 +26,7 @@
     <link href="{% static 'dashboard/css/icons.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'dashboard/css/flag-icon.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'dashboard/css/style.css' %}" rel="stylesheet" type="text/css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <!-- End css -->
 </head>
 
@@ -105,9 +106,9 @@
         <div class="sidebar">
             <!-- Start Logobar -->
             <div class="logobar">
-                <a href="index.html" class="logo logo-large"><img src="{% static 'main/image/catalog/logo/ostromi2-footer.png' %}"
+                <a href="index.html" class="logo logo-large"><img src="{% static 'main/images/layout-4/logo/ostromi2.png' %}"
                                                                   class="img-fluid" alt="logo"></a>
-                <a href="index.html" class="logo logo-small"><img src="{% static 'main/image/catalog/logo/ostromi2-footer.png' %}"
+                <a href="index.html" class="logo logo-small"><img src="{% static 'main/images/layout-4/logo/ostromi2.png' %}"
                                                                   class="img-fluid" alt="logo"></a>
             </div>
             <!-- End Logobar -->
